# claude-security-reviewer-v2

./: .env.example  .gitignore  .pre-commit-config.yaml  DELIVERY.md  Dockerfile  Dockerfile.bak  IMPLEMENTATION_STATUS.md  INDEX.md  LICENSE  README.md  README_UPGRADE.md  SECURITY.md  UPGRADE_SUMMARY.md  V2_UPGRADE_SUMMARY.md  __init__.py  action.yml  docker-compose.yml  error_tb.txt  error_tb_2.txt  install.bat  install.ps1  install.sh  package.json  pyproject.toml  requirements.txt  requirements.txt.bak  ruff.toml  server.py  server.py.bak  setup.py  test_full_flow.py  test_out.txt  uninstall.bat  uninstall.sh  verify_installation.py  verify_setup.py  verify_terminal_visuals.py  verify_upgrade.py
.claude/commands/: security-review.md
.github/workflows/: sast.yml  test-claudecode.yml
api/: static_analysis.py
claude_code_security_review.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
claudecode/: __init__.py  audit.py  cache.py  claude_api_client.py  constants.py  custom_rules.py  dependency_scanner.py  findings_filter.py  github_action_audit.py  iac_scanner.py  json_parser.py  logger.py  prompts.py  requirements-dev.txt  requirements.txt  schema.py  secrets_scanner.py  test_claude_runner.py  test_eval_engine.py  test_findings_conversion.py  test_github_action_audit.py  test_github_client.py  test_hard_exclusion_rules.py  test_helper_functions.py  test_integration.py  test_json_parser.py  test_main_function.py  test_prompts.py  test_schema.py  test_workflow_integration.py
claudecode/evals/: README.md  __init__.py  eval_engine.py  run_eval.py
core/: hook_manager.py  orchestrator.py  plugin_manager.py
docs/: COMPREHENSIVE_UPGRADE_ANALYSIS.md  custom-filtering-instructions.md  custom-security-scan-instructions.md
examples/: custom-false-positive-filtering.txt  custom-security-scan-instructions.txt
scripts/: comment-pr-findings.bun.test.js  comment-pr-findings.js  package.json
templates/: index.html
tests/: final_debug.py  test_security_fixes.py  verify_baseten.py  verify_features.py  verify_github_valid.py  verify_kimi.py  verify_multi_source.py  verify_warning.py
