[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-security-reviewer-enterprise"
version = "3.0.0"
description = "Enterprise-grade AI-powered security review platform with multi-agent orchestration"
readme = "README.md"
authors = [
    {name = "Security Team", email = "security@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["security", "code-review", "static-analysis", "ai", "llm", "claude"]
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "python-multipart>=0.0.6",
    "anthropic>=0.18.1",
    "openai>=1.12.0",
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.3",
    "websockets>=12.0",
    "tenacity>=8.2.3",
    "jinja2>=3.1.3",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "semver>=3.0.2",
    "redis>=5.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
    "black>=24.1.1",
    "pre-commit>=3.6.0",
]

docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.6",
]

[project.urls]
Homepage = "https://github.com/your-org/claude-security-reviewer-v3"
Documentation = "https://docs.your-org.com/claude-security-reviewer"
Repository = "https://github.com/your-org/claude-security-reviewer-v3"
"Bug Tracker" = "https://github.com/your-org/claude-security-reviewer-v3/issues"

[project.scripts]
claude-security = "claudecode.cli:main"

[tool.setuptools]
packages = ["core", "agents", "hooks", "scanners", "claudecode", "api"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.yaml", "*.yml"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=core --cov=agents --cov=scanners --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["core", "agents", "hooks", "scanners", "claudecode"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
